kubernetes/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
  labels:
    app.kubernetes.io/name: portainer
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 9000
    protocol: TCP
  - name: edge
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/name: portainer
